2008-10-22  Jakub Jelinek  <jakub@redhat.com>

	PR target/37880
	* doc/invoke.texi: Fix spelling of -mlarge-data-threshold option.
	Adjust -mcmodel=medium description for 2005-07-31 changes.

2008-10-22  Jan Hubicka  <jh@suse.cz>
	    Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/35853
	* doc/invoke.texi: Remove references to obsoleted -d dumps.

2008-10-21  Richard Henderson  <rth@redhat.com>

	PR 37815
	* emit-rtl.c (get_spill_slot_decl): Export.
	* emit-rtl.h (get_spill_slot_decl): Declare.
	* var-tracking.c (vt_add_function_parameters): Relax assertion
	on the contents of MEM_EXPR in a PARM_DECL to include a spill slot.

2008-10-21  Bob Wilson  <bob.wilson@acm.org>

	* var-tracking.c (insn_stack_adjust_offset_pre_post): If insn has a
	REG_FRAME_RELATED_EXPR note, examine the pattern from the note instead
	of from insn.

2008-10-21  Adam Nemet  <anemet@caviumnetworks.com>

	PR middle-end/37669
	* tree-ssa-ccp.c (ccp_fold_builtin): Only allow one argument to be
	processed by get_maxval_strlen.

2008-10-21  David Edelsohn  <edelsohn@gnu.org>

	PR target/35485
	* tree.c (get_file_function_name): Copy first_global_object_name.
	Centralize call to clean_symbol_name.

2008-10-21  Sandra Loosemore  <sandra@codesourcery.com>

	* config.gcc (powerpc-*): Make t-ppcgas imply usegas.h.
	* config/svr4.h (SVR4_ASM_SPEC): New.
	(ASM_SPEC): Inherit from SVR4_ASM_SPEC.
	* config/rs6000/sysv4.h (ASM_SPEC): Inherit from SVR4_ASM_SPEC.

	* doc/invoke.texi (Option Summary): Add -T to linker options.
	(Link Options): Document -T.
	
2008-10-21  Jakub Jelinek  <jakub@redhat.com>

	* tree-inline.c (tree_inlinable_function_p): Remove tuples
	debugging hack.

	* gimplify.c (gimplify_expr): Drop TREE_OVERFLOW from
	INTEGER_CSTs.

	PR debug/37020
	* c-decl.c (merge_decls): Don't call outlining_inline_function hook.

2008-10-20  Daniel Berlin  <dberlin@dberlin.org>

	* tree-ssa-pre.c (insert_into_preds_of_block): Don't rewrite constant
	part of expression.
